Optimize some code